syntax = "proto3";
package g4alentertainment.g4alchain.denomfactory;

import "g4alchain/denomfactory/denom.proto";
// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/G4AL-Entertainment/g4al-chain/x/denomfactory/types";

// Msg defines the Msg service.
service Msg {
      rpc CreateDenom(MsgCreateDenom) returns (MsgCreateDenomResponse);
  rpc UpdateDenom(MsgUpdateDenom) returns (MsgUpdateDenomResponse);
  rpc MintDenom(MsgMintDenom) returns (MsgMintDenomResponse);
  rpc BurnDenom(MsgBurnDenom) returns (MsgBurnDenomResponse);
  rpc TransferDenom(MsgTransferDenom) returns (MsgTransferDenomResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgCreateDenom {
  string creator = 1;
  string symbol = 2;

  string project = 3;
  uint64 maxSupply = 4;
  bool canChangeMaxSupply = 5;
  string name = 6;
  string description = 7;
  string uri = 8;
  string uri_hash = 9;

}
message MsgCreateDenomResponse {}

message MsgUpdateDenom {
  string creator = 1;
  string symbol = 2;

  string project = 3;
  uint64 maxSupply = 4;
  string name = 5;
  string description = 6;
  string uri = 7;
  string uri_hash = 8;
}
message MsgUpdateDenomResponse {}

message MsgMintDenom {
  string creator = 1;
  string symbol = 2;
  uint64 amount = 3;
  string receiver = 4;
}

message MsgMintDenomResponse {
}

message MsgBurnDenom {
  string creator = 1;
  string symbol = 2;
  uint64 amount = 3;
}

message MsgBurnDenomResponse {
}

message MsgTransferDenom {
  string creator = 1;
  string symbol = 2;
  uint64 amount = 3;
  string receiver = 4;
}

message MsgTransferDenomResponse {
}

// this line is used by starport scaffolding # proto/tx/message
